--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "author": "Philo van Kemenade",
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0"
+    "@11ty/eleventy": "^2.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
+  },
+  "dependencies": {
+    "glob": "^11.0.1"
   }
 }
